# my-passes

./: CMakeLists.txt  README.md  example.c
include/: 1_Functions.hpp  2_BasicBlocksCount.hpp  3_InstructionsInBB.hpp  4_Opcodes.hpp  5_FunctionCallsCount.hpp  6_AddToSub.hpp
scripts/: build.sh  install_dependencies.sh  run-passes.sh
source/: 1_Functions.cpp  2_BasicBlocksCount.cpp  3_InstructionsInBB.cpp  4_Opcodes.cpp  5_FunctionCallsCount.cpp  6_AddToSub.cpp  CMakeLists.txt  main.cpp
test/: 1_functions-test.ll  2_basic-blocks-cout-test.ll  3_instructions-in-bb-test.ll  4_opcodes-test.ll  5_functions-call-count-test.ll  6_add-to-sub-test.ll  lit.cfg.py
